add image decode test

--- a/Convolutional Neural Networks.ipynb
+++ b/Convolutional Neural Networks.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -228,10 +228,10 @@
     "        labels = tf.placeholder(tf.float32, [None, cifar10.num_classes])\n",
     "\n",
     "        logits = inference(images)\n",
-    "        total_loss = loss(logits, labels)\n",
+    "        loss_op = loss(logits, labels)\n",
     "        \n",
     "        opt = tf.train.AdamOptimizer()\n",
-    "        grads = opt.compute_gradients(total_loss)\n",
+    "        grads = opt.compute_gradients(loss_op)\n",
     "        \n",
     "        apply_gradient_op = opt.apply_gradients(grads)\n",
     "        \n",
@@ -252,13 +252,13 @@
     "            init = tf.initialize_all_variables()\n",
     "            sess.run(init)\n",
     "        \n",
-    "            summary_writer = tf.train.SummaryWriter('tmp/cifar10_train', graph_def=sess.graph_def)\n",
+    "            summary_writer = tf.train.SummaryWriter('/tmp/cifar10_train', graph_def=sess.graph_def)\n",
     "        \n",
     "            for step in xrange(1001):\n",
     "                start_time = time.time()\n",
     "                batch = cifar10.train.next_batch(MINIBATCH)\n",
     "            \n",
-    "                _, loss_value = sess.run([train_op, total_loss], feed_dict={images: batch[0], labels: batch[1]})\n",
+    "                _, loss_value = sess.run([train_op, loss_op], feed_dict={images: batch[0], labels: batch[1]})\n",
     "            \n",
     "                duration = time.time() - start_time\n",
     "            \n",
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -288,17 +288,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-01-06 18:44:38.278544: epoch 0000, step 0000, loss = 2.30 (344.7 examples/sec; 0.371 sec/batch)\n",
-      "2016-01-06 18:44:40.251478: epoch 0000, step 0010, loss = 2.30 (855.3 examples/sec; 0.150 sec/batch)\n",
-      "2016-01-06 18:44:41.830521: epoch 0000, step 0020, loss = 2.30 (791.1 examples/sec; 0.162 sec/batch)\n",
-      "2016-01-06 18:44:43.424261: epoch 0000, step 0030, loss = 2.31 (778.1 examples/sec; 0.165 sec/batch)\n",
-      "2016-01-06 18:44:45.005652: epoch 0000, step 0040, loss = 2.24 (809.4 examples/sec; 0.158 sec/batch)\n",
-      "2016-01-06 18:44:46.592752: epoch 0000, step 0050, loss = 2.20 (789.1 examples/sec; 0.162 sec/batch)\n",
-      "2016-01-06 18:44:48.164995: epoch 0000, step 0060, loss = 2.13 (798.7 examples/sec; 0.160 sec/batch)\n",
-      "2016-01-06 18:44:49.746354: epoch 0000, step 0070, loss = 2.16 (809.9 examples/sec; 0.158 sec/batch)\n",
-      "2016-01-06 18:44:51.329754: epoch 0000, step 0080, loss = 2.13 (826.6 examples/sec; 0.155 sec/batch)\n",
-      "2016-01-06 18:44:52.924972: epoch 0000, step 0090, loss = 2.07 (839.8 examples/sec; 0.152 sec/batch)\n",
-      "2016-01-06 18:44:54.523996: epoch 0000, step 0100, loss = 2.04 (827.7 examples/sec; 0.155 sec/batch)"
+      "2016-01-06 18:58:39.793958: epoch 0002, step 0000, loss = 2.30 (562.3 examples/sec; 0.228 sec/batch)\n",
+      "2016-01-06 18:58:41.852704: epoch 0002, step 0010, loss = 2.30 (765.7 examples/sec; 0.167 sec/batch)\n",
+      "2016-01-06 18:58:43.615652: epoch 0002, step 0020, loss = 2.28 (741.4 examples/sec; 0.173 sec/batch)\n",
+      "2016-01-06 18:58:45.273505: epoch 0002, step 0030, loss = 2.27 (776.7 examples/sec; 0.165 sec/batch)\n",
+      "2016-01-06 18:58:46.979025: epoch 0002, step 0040, loss = 2.14 (775.5 examples/sec; 0.165 sec/batch)\n",
+      "2016-01-06 18:58:48.633286: epoch 0002, step 0050, loss = 2.14 (791.8 examples/sec; 0.162 sec/batch)\n",
+      "2016-01-06 18:58:50.335569: epoch 0002, step 0060, loss = 2.09 (764.9 examples/sec; 0.167 sec/batch)\n",
+      "2016-01-06 18:58:52.038030: epoch 0002, step 0070, loss = 2.02 (794.2 examples/sec; 0.161 sec/batch)\n",
+      "2016-01-06 18:58:53.744394: epoch 0002, step 0080, loss = 1.95 (776.0 examples/sec; 0.165 sec/batch)\n",
+      "2016-01-06 18:58:55.439114: epoch 0002, step 0090, loss = 1.98 (734.9 examples/sec; 0.174 sec/batch)\n",
+      "2016-01-06 18:58:57.169217: epoch 0002, step 0100, loss = 2.16 (764.1 examples/sec; 0.168 sec/batch)\n",
+      "2016-01-06 18:58:59.207623: epoch 0002, step 0110, loss = 1.90 (807.2 examples/sec; 0.159 sec/batch)\n",
+      "2016-01-06 18:59:00.929434: epoch 0002, step 0120, loss = 1.99 (758.6 examples/sec; 0.169 sec/batch)\n",
+      "2016-01-06 18:59:02.634331: epoch 0002, step 0130, loss = 1.98 (687.9 examples/sec; 0.186 sec/batch)\n",
+      "2016-01-06 18:59:04.282627: epoch 0002, step 0140, loss = 1.99 (766.6 examples/sec; 0.167 sec/batch)\n",
+      "2016-01-06 18:59:05.968478: epoch 0002, step 0150, loss = 2.00 (776.9 examples/sec; 0.165 sec/batch)\n",
+      "2016-01-06 18:59:07.692817: epoch 0002, step 0160, loss = 1.99 (786.1 examples/sec; 0.163 sec/batch)\n",
+      "2016-01-06 18:59:09.482217: epoch 0003, step 0170, loss = 1.96 (664.0 examples/sec; 0.193 sec/batch)\n",
+      "2016-01-06 18:59:11.176112: epoch 0003, step 0180, loss = 1.85 (770.8 examples/sec; 0.166 sec/batch)\n",
+      "2016-01-06 18:59:12.890924: epoch 0003, step 0190, loss = 1.93 (774.9 examples/sec; 0.165 sec/batch)\n",
+      "2016-01-06 18:59:14.573834: epoch 0003, step 0200, loss = 1.94 (758.8 examples/sec; 0.169 sec/batch)\n",
+      "2016-01-06 18:59:16.581260: epoch 0003, step 0210, loss = 1.76 (752.2 examples/sec; 0.170 sec/batch)\n",
+      "2016-01-06 18:59:18.263618: epoch 0003, step 0220, loss = 1.84 (764.0 examples/sec; 0.168 sec/batch)\n",
+      "2016-01-06 18:59:19.966159: epoch 0003, step 0230, loss = 1.70 (741.8 examples/sec; 0.173 sec/batch)\n",
+      "2016-01-06 18:59:21.639086: epoch 0003, step 0240, loss = 1.67 (739.4 examples/sec; 0.173 sec/batch)\n",
+      "2016-01-06 18:59:23.344369: epoch 0003, step 0250, loss = 1.95 (776.8 examples/sec; 0.165 sec/batch)\n",
+      "2016-01-06 18:59:25.025172: epoch 0003, step 0260, loss = 1.69 (783.1 examples/sec; 0.163 sec/batch)\n",
+      "2016-01-06 18:59:26.771439: epoch 0003, step 0270, loss = 1.76 (742.6 examples/sec; 0.172 sec/batch)\n",
+      "2016-01-06 18:59:28.464838: epoch 0003, step 0280, loss = 1.74 (731.8 examples/sec; 0.175 sec/batch)\n",
+      "2016-01-06 18:59:30.146748: epoch 0003, step 0290, loss = 1.73 (750.7 examples/sec; 0.171 sec/batch)\n",
+      "2016-01-06 18:59:31.792672: epoch 0003, step 0300, loss = 1.69 (750.3 examples/sec; 0.171 sec/batch)\n",
+      "2016-01-06 18:59:33.726488: epoch 0003, step 0310, loss = 1.75 (756.9 examples/sec; 0.169 sec/batch)\n",
+      "2016-01-06 18:59:35.426872: epoch 0003, step 0320, loss = 1.63 (728.6 examples/sec; 0.176 sec/batch)\n",
+      "2016-01-06 18:59:37.137923: epoch 0003, step 0330, loss = 1.72 (744.7 examples/sec; 0.172 sec/batch)\n",
+      "2016-01-06 18:59:38.858044: epoch 0003, step 0340, loss = 1.70 (767.4 examples/sec; 0.167 sec/batch)\n",
+      "2016-01-06 18:59:40.555101: epoch 0003, step 0350, loss = 1.61 (738.5 examples/sec; 0.173 sec/batch)\n",
+      "2016-01-06 18:59:42.282241: epoch 0003, step 0360, loss = 1.51 (757.2 examples/sec; 0.169 sec/batch)\n",
+      "2016-01-06 18:59:44.001209: epoch 0003, step 0370, loss = 1.73 (775.5 examples/sec; 0.165 sec/batch)\n",
+      "2016-01-06 18:59:45.677390: epoch 0003, step 0380, loss = 1.60 (800.4 examples/sec; 0.160 sec/batch)\n",
+      "2016-01-06 18:59:47.353456: epoch 0003, step 0390, loss = 1.56 (780.8 examples/sec; 0.164 sec/batch)\n",
+      "2016-01-06 18:59:49.221301: epoch 0003, step 0400, loss = 1.77 (662.6 examples/sec; 0.193 sec/batch)\n",
+      "2016-01-06 18:59:51.161268: epoch 0003, step 0410, loss = 1.64 (726.2 examples/sec; 0.176 sec/batch)\n",
+      "2016-01-06 18:59:52.875701: epoch 0003, step 0420, loss = 1.55 (718.2 examples/sec; 0.178 sec/batch)\n",
+      "2016-01-06 18:59:54.571825: epoch 0003, step 0430, loss = 1.69 (716.7 examples/sec; 0.179 sec/batch)\n",
+      "2016-01-06 18:59:56.243569: epoch 0003, step 0440, loss = 1.69 (755.0 examples/sec; 0.170 sec/batch)\n",
+      "2016-01-06 18:59:57.933993: epoch 0003, step 0450, loss = 1.66 (750.7 examples/sec; 0.171 sec/batch)\n",
+      "2016-01-06 18:59:59.609588: epoch 0003, step 0460, loss = 1.67 (805.6 examples/sec; 0.159 sec/batch)\n",
+      "2016-01-06 19:00:01.302436: epoch 0003, step 0470, loss = 1.50 (733.0 examples/sec; 0.175 sec/batch)\n",
+      "2016-01-06 19:00:02.992004: epoch 0003, step 0480, loss = 1.57 (691.2 examples/sec; 0.185 sec/batch)\n",
+      "2016-01-06 19:00:04.680063: epoch 0003, step 0490, loss = 1.47 (739.0 examples/sec; 0.173 sec/batch)\n",
+      "2016-01-06 19:00:06.403575: epoch 0003, step 0500, loss = 1.50 (740.5 examples/sec; 0.173 sec/batch)\n",
+      "2016-01-06 19:00:08.337317: epoch 0003, step 0510, loss = 1.75 (750.6 examples/sec; 0.171 sec/batch)\n",
+      "2016-01-06 19:00:10.004735: epoch 0003, step 0520, loss = 1.61 (778.6 examples/sec; 0.164 sec/batch)\n",
+      "2016-01-06 19:00:11.705340: epoch 0003, step 0530, loss = 1.52 (626.9 examples/sec; 0.204 sec/batch)\n",
+      "2016-01-06 19:00:13.352845: epoch 0003, step 0540, loss = 1.71 (800.4 examples/sec; 0.160 sec/batch)\n",
+      "2016-01-06 19:00:15.039602: epoch 0003, step 0550, loss = 1.50 (717.8 examples/sec; 0.178 sec/batch)\n",
+      "2016-01-06 19:00:16.796697: epoch 0004, step 0560, loss = 1.55 (750.9 examples/sec; 0.170 sec/batch)\n",
+      "2016-01-06 19:00:18.491060: epoch 0004, step 0570, loss = 1.40 (754.0 examples/sec; 0.170 sec/batch)\n",
+      "2016-01-06 19:00:20.233583: epoch 0004, step 0580, loss = 1.52 (748.3 examples/sec; 0.171 sec/batch)\n",
+      "2016-01-06 19:00:21.937651: epoch 0004, step 0590, loss = 1.50 (739.1 examples/sec; 0.173 sec/batch)\n",
+      "2016-01-06 19:00:23.663818: epoch 0004, step 0600, loss = 1.38 (734.4 examples/sec; 0.174 sec/batch)\n",
+      "2016-01-06 19:00:25.575442: epoch 0004, step 0610, loss = 1.44 (727.3 examples/sec; 0.176 sec/batch)\n",
+      "2016-01-06 19:00:27.249549: epoch 0004, step 0620, loss = 1.45 (789.6 examples/sec; 0.162 sec/batch)\n",
+      "2016-01-06 19:00:28.918959: epoch 0004, step 0630, loss = 1.51 (726.7 examples/sec; 0.176 sec/batch)\n",
+      "2016-01-06 19:00:30.618264: epoch 0004, step 0640, loss = 1.48 (757.2 examples/sec; 0.169 sec/batch)\n",
+      "2016-01-06 19:00:32.265432: epoch 0004, step 0650, loss = 1.46 (811.2 examples/sec; 0.158 sec/batch)\n",
+      "2016-01-06 19:00:33.920968: epoch 0004, step 0660, loss = 1.41 (773.9 examples/sec; 0.165 sec/batch)\n",
+      "2016-01-06 19:00:35.642189: epoch 0004, step 0670, loss = 1.41 (742.1 examples/sec; 0.172 sec/batch)\n",
+      "2016-01-06 19:00:37.343989: epoch 0004, step 0680, loss = 1.48 (794.7 examples/sec; 0.161 sec/batch)\n",
+      "2016-01-06 19:00:39.047936: epoch 0004, step 0690, loss = 1.53 (736.3 examples/sec; 0.174 sec/batch)\n",
+      "2016-01-06 19:00:40.730005: epoch 0004, step 0700, loss = 1.54 (781.0 examples/sec; 0.164 sec/batch)\n",
+      "2016-01-06 19:00:42.728585: epoch 0004, step 0710, loss = 1.40 (761.4 examples/sec; 0.168 sec/batch)\n",
+      "2016-01-06 19:00:44.394881: epoch 0004, step 0720, loss = 1.37 (754.5 examples/sec; 0.170 sec/batch)\n",
+      "2016-01-06 19:00:46.076960: epoch 0004, step 0730, loss = 1.34 (755.1 examples/sec; 0.170 sec/batch)\n",
+      "2016-01-06 19:00:47.753008: epoch 0004, step 0740, loss = 1.36 (772.4 examples/sec; 0.166 sec/batch)\n",
+      "2016-01-06 19:00:49.411568: epoch 0004, step 0750, loss = 1.47 (784.2 examples/sec; 0.163 sec/batch)\n",
+      "2016-01-06 19:00:51.131127: epoch 0004, step 0760, loss = 1.42 (705.8 examples/sec; 0.181 sec/batch)\n",
+      "2016-01-06 19:00:52.811330: epoch 0004, step 0770, loss = 1.29 (785.2 examples/sec; 0.163 sec/batch)\n",
+      "2016-01-06 19:00:54.467336: epoch 0004, step 0780, loss = 1.35 (741.3 examples/sec; 0.173 sec/batch)\n",
+      "2016-01-06 19:00:56.168545: epoch 0004, step 0790, loss = 1.33 (747.0 examples/sec; 0.171 sec/batch)\n",
+      "2016-01-06 19:00:57.851580: epoch 0004, step 0800, loss = 1.48 (779.5 examples/sec; 0.164 sec/batch)\n",
+      "2016-01-06 19:00:59.742070: epoch 0004, step 0810, loss = 1.42 (768.6 examples/sec; 0.167 sec/batch)\n",
+      "2016-01-06 19:01:01.388272: epoch 0004, step 0820, loss = 1.29 (784.8 examples/sec; 0.163 sec/batch)\n",
+      "2016-01-06 19:01:03.081996: epoch 0004, step 0830, loss = 1.34 (787.8 examples/sec; 0.162 sec/batch)\n",
+      "2016-01-06 19:01:04.759219: epoch 0004, step 0840, loss = 1.47 (763.9 examples/sec; 0.168 sec/batch)\n",
+      "2016-01-06 19:01:06.437833: epoch 0004, step 0850, loss = 1.27 (711.7 examples/sec; 0.180 sec/batch)\n",
+      "2016-01-06 19:01:08.090769: epoch 0004, step 0860, loss = 1.36 (807.4 examples/sec; 0.159 sec/batch)\n",
+      "2016-01-06 19:01:09.756818: epoch 0004, step 0870, loss = 1.46 (715.5 examples/sec; 0.179 sec/batch)\n",
+      "2016-01-06 19:01:11.431180: epoch 0004, step 0880, loss = 1.46 (734.0 examples/sec; 0.174 sec/batch)\n",
+      "2016-01-06 19:01:13.119805: epoch 0004, step 0890, loss = 1.52 (783.7 examples/sec; 0.163 sec/batch)\n",
+      "2016-01-06 19:01:14.800622: epoch 0004, step 0900, loss = 1.41 (800.1 examples/sec; 0.160 sec/batch)\n",
+      "2016-01-06 19:01:16.739233: epoch 0004, step 0910, loss = 1.36 (756.8 examples/sec; 0.169 sec/batch)\n",
+      "2016-01-06 19:01:18.394700: epoch 0004, step 0920, loss = 1.53 (748.6 examples/sec; 0.171 sec/batch)\n",
+      "2016-01-06 19:01:20.070821: epoch 0004, step 0930, loss = 1.47 (786.2 examples/sec; 0.163 sec/batch)\n",
+      "2016-01-06 19:01:21.766668: epoch 0004, step 0940, loss = 1.52 (760.1 examples/sec; 0.168 sec/batch)\n",
+      "2016-01-06 19:01:23.572934: epoch 0005, step 0950, loss = 1.37 (720.2 examples/sec; 0.178 sec/batch)\n",
+      "2016-01-06 19:01:25.258403: epoch 0005, step 0960, loss = 1.16 (761.5 examples/sec; 0.168 sec/batch)\n",
+      "2016-01-06 19:01:26.909393: epoch 0005, step 0970, loss = 1.22 (802.1 examples/sec; 0.160 sec/batch)\n",
+      "2016-01-06 19:01:28.576756: epoch 0005, step 0980, loss = 1.29 (755.1 examples/sec; 0.170 sec/batch)\n",
+      "2016-01-06 19:01:30.263690: epoch 0005, step 0990, loss = 1.36 (755.7 examples/sec; 0.169 sec/batch)\n",
+      "2016-01-06 19:01:31.922209: epoch 0005, step 1000, loss = 1.25 (810.6 examples/sec; 0.158 sec/batch)\n"
      ]
     }
    ],
