--- a/read images.ipynb
+++ b/read images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def read_csv_format(filename_queue, width, height, channels=3, is_dense_vector=False):    \n",
+    "def read_csv_format_with_image(filename_queue, width, height, channels=3):\n",
     "    reader = tf.TextLineReader()\n",
     "    key, line = reader.read(filename_queue)\n",
     "    _ = tf.decode_csv(line, record_defaults=[[''], [0]])\n",
-    "    label = tf.cast(_[1], tf.int32)\n",
+    "    label = _[1]# tf.cast(_[1], tf.int32)\n",
     "    filepath = _[0]\n",
     "    \n",
     "    bytestream = tf.read_file(filepath)\n",
@@ -31,26 +31,25 @@
     "    \n",
     "    #TODO: add preprocessing\n",
     "    \n",
-    "    tf.image.resize_images(image, height, width)\n",
-    "    \n",
+    "    image = tf.image.resize_images(image, height, width)\n",
+    "\n",
+    "    label = tf.cast(label, tf.int32)\n",
     "    image = tf.cast(image, tf.float32)\n",
-    "    print label.get_shape()\n",
-    "    print image.get_shape()\n",
     "    return image, label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def input_pipeline(filenames, width, height, batch_size, channels=3, is_dense_vector=False, read_threads=8, num_epochs=None):\n",
+    "def input_pipeline(filenames, width, height, batch_size, channels=3, read_threads=8, num_epochs=None):\n",
     "    filename_queue = tf.train.string_input_producer(filenames, num_epochs=num_epochs, shuffle=True)\n",
-    "    example_list = [read_csv_format(filename_queue, width, height, channels, is_dense_vector) for _ in range(read_threads)]\n",
-    "    min_after_dequeue = 10\n",
+    "    example_list = [read_csv_format_with_image(filename_queue, width, height, channels) for _ in range(read_threads)]\n",
+    "    min_after_dequeue = 1\n",
     "    capacity = min_after_dequeue + 3 * batch_size\n",
     "    image_batch, label_batch = tf.train.shuffle_batch_join(\n",
     "        example_list, batch_size=batch_size, capacity=capacity, min_after_dequeue=min_after_dequeue)\n",
@@ -65,31 +64,64 @@
    },
    "outputs": [],
    "source": [
-    "image, label = input_pipeline(['datas/sample.txt'], 32, 32, 4)\n",
+    "image, label = input_pipeline(['datas/ordered.txt'], 32, 32, 4)\n",
     "\n",
-    "sess = tf.Session()\n",
-    "sess.run( tf.initialize_all_variables() )\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run( tf.initialize_all_variables() )\n",
+    "    \n",
+    "    # start input enqueue threads\n",
+    "    coord = tf.train.Coordinator()\n",
+    "    threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
+    "    \n",
+    "    try:\n",
+    "        i = 0\n",
+    "        while not coord.should_stop():\n",
+    "            i += 1\n",
+    "            if i > 10:\n",
+    "                break;\n",
+    "            batch = sess.run([image, label])\n",
+    "            print batch[1]\n",
+    "    except tf.error.outOfRangeError:\n",
+    "        print('Done training -- epoch limit reached')\n",
+    "    finally:\n",
+    "        coord.request_stop()\n",
     "\n",
-    "# start input enqueue threads\n",
-    "coord = tf.train.Coordinator()\n",
-    "threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
+    "    # wait for threads to finish\n",
+    "    coord.join(threads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "image, label = input_pipeline(['datas/label0.txt', 'datas/label1.txt', 'datas/label2.txt', 'datas/label3.txt'], 32, 32, 4)\n",
     "\n",
-    "try:\n",
-    "    i = 0\n",
-    "    while not coord.should_stop():\n",
-    "        i += 1\n",
-    "        if i > 10:\n",
-    "            break;\n",
-    "        batch = sess.run([image, label])\n",
-    "        print batch[0].shape, batch[1]\n",
-    "except tf.error.outOfRangeError:\n",
-    "    print('Done training -- epoch limit reached')\n",
-    "finally:\n",
-    "    coord.request_stop()\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run( tf.initialize_all_variables() )\n",
+    "    \n",
+    "    # start input enqueue threads\n",
+    "    coord = tf.train.Coordinator()\n",
+    "    threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
+    "    \n",
+    "    try:\n",
+    "        i = 0\n",
+    "        while not coord.should_stop():\n",
+    "            i += 1\n",
+    "            if i > 10:\n",
+    "                break;\n",
+    "            batch = sess.run([image, label])\n",
+    "            print batch[1]\n",
+    "    except tf.error.outOfRangeError:\n",
+    "        print('Done training -- epoch limit reached')\n",
+    "    finally:\n",
+    "        coord.request_stop()\n",
     "\n",
-    "# wait for threads to finish\n",
-    "coord.join(threads)\n",
-    "sess.close()"
+    "    # wait for threads to finish\n",
+    "    coord.join(threads)"
    ]
   },
   {
