--- a/cifar10/test.ipynb
+++ b/cifar10/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -30,11 +30,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x7fb25db7d7d0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAMYAAADGCAYAAACJm/9dAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHANJREFUeJztnXmQXFd1xr/T2/T0bBqNdo214BWMjGzAhWMSG4KxgVRM\noFhCUgGcSmXBSSqEAFldhISCUDEFpEgKLxQECAGqDIZiMWAcAsEgW5ItJNkSkkaypNFomX2m9775\no3uk0Xzfk3pmeloa1flVTann6PW973XP6dfn3nO+YyEEOI5zNrELfQKOczHijuE4AncMxxG4YziO\nwB3DcQTuGI4jmJdjmNkdZvaMme0xs/c16qQc50Jjc93HMLMYgD0Afh3AUQBbALw1hPBM407PcS4M\niXk890YAe0MIBwHAzL4E4E4AZzmGmfkOonPREkIwZZ+PY6wF8Ny03w+j6izEsiVdAICJbA5trWk5\nmJk8P9xx+21ke83rXkO23ssuO/34wc98Dne98/eQKGmfTC9bTraupSvIdqj/KNkGBgZOP/7KF7+A\nN73td7Cyq13O0921hGyJ9k6yjReKfD5tmdOP/+1j9+Luv3g3AGAiO0bHnhgcJlsolci2Z5++mX/w\nL98LAJiczCKTaZXHRKHet6j3cso+PjGJ9tr11fv8840ZZRsdHUNnZwdiMY4anjvM7+8UHnw7jmA+\nd4wjANZN+723ZiMmsjkAQLFUQqFYQio5n2kdZ27kcnnk8/m6jp3PX+gWAFeY2XoA/QDeCuC31YFT\nX5+a5RTXb37Rgs8BAC/YtKkp89z4spuaMk+ySR9YqWSyKfMAQEtL6vTjdLoF6XTL6d9Hx8Yjnzfn\nVyKEUDazuwE8gupXsgdCCLvP9Zxm3Smuv745jnHtpuuaMs+NNzXLMZrzB5tKNdMxWs5/kGBef6kh\nhO8AuHo+Y5w+kVhc2l95+x1k61jCQW1SLC6MhYIcszA6SrZsmZ+//9BzZBvPclC7ZnmPnCdfrpCt\nPZ0i21IRpHd2tMkxf7L9GNkSCT73E8MjZOvp7pJjXnnN88m2Z/cusqlAd7GULcz2PD34dhyBO4bj\nCNwxHEfgjuE4gqYsE9UT+GzYuE7a16/fSLb2Nl5pODU0QbZEq96R3nf4JNn29/Ou8H6x81003hne\n89xxOc+v3nAN2QrGn0WdnbwbPjA6JMeMlSbZJq4zneCVn/Gi3j3+3bvfRbZ/eBfb1Pu4WAJyD74d\npwG4YziOwB3DcQTuGI4juCDBt0oBXrNuvXxuurWDbGPjnONy+dUc6N777/fLMX/wrW+SrVDi1O8l\nqzeQLdbBu8elK18g53noscfJdu3zOVGgo53HXLl8qRxzqTh2aEAsEojnlstlOeaVV9aXvFBvABuV\nIt6soLwRCwJ+x3AcgTuG4wjcMRxH4I7hOILmFEjMiHuCSMd+211/Ip+6pIvTrw+LYPOZHzxGtm9+\n5b/1+SQ4xV0FbMNDvKOdErXU+/b8Qk4T4pxi3j/IKe8xUaeybl2vHPPlN76EbFetWks2Fbw/sWuH\nHLOnjXfOu7q4Bn54eIBsiqhANyoobzSNCPL9juE4AncMxxHM66uUmfUBGAFQAVAMIUj5HMdZbMw3\nxqgAuDWEoFNBHWeRMt+vUtaAMRznomO+d4wA4HtmVgbw6RDCffqgs1cJWtIZOqazUxf/T+RZ0GD9\nZZw+8t73vJ1suRzXLgAAkrwqpVJP4gl+edSKRzabldOY5cjWX2Rbqo3rMZDSb83OvfvItuIlrFay\nf/tTZLvlxdfLMQ8c7Sfbe/7278j2t++5Wz5/JhdjSshsma9j3BxC6Dez5ag6yO4Qwo/nfVaOc4GZ\nr3xOf+3fE2b2EKrateQY2Wnqb4l4HFq91nEWlny+gEJBSyrNZM6OYWYZALEQwriZtQF4NYAPqGNb\n5yh65TiNpKUldZYy4fhExFdtzO+OsRLAQzWZ/wSAL4QQHpnHeI5z0TAfic4DADbXeexZv2fSfAdZ\n36tTIJZ2clD81C5WAs2KoDaYVjeMm7hsERdOTrDAQmsLnw8i6hwggsDSJI+pbu+FPB8HAEnjdJpU\njOd/xSauT9mx75Acc/UyVlJ84UvqkzmdTUC9EMIJ9Y4524Dcl1odR+CO4TgCdwzHEbhjOI6gKfUY\nMwOfNb2X0TERInnY8tMfke3kGJf6FwscfFdKes06KWTzTxV56S5eYTW/1jg/txKL6PcQ588dtXSd\nL3HwXMzr3fShIU5LK8X4bVy9Zg3ZKnl+jQBgeJwD/SUZPs+FUCKsNyieTfCs5ncxBMdpAO4YjiNw\nx3AcgTuG4wguiBJhMs3B6ogIKgEg3s1F+RNH9pCtJEQKkkmdo/XSV7+RbCdEivq+AyxykB3gjs0V\ncT0AUJzkZvVlEQCXwIGl3J0HMPjMdrJt/cZDZHvL//2EbLmIxYjlQnCiNMIB+XyVCOdDJWLurhbO\nbhgvcHaAB9+O0wDcMRxH4I7hOAJ3DMcRNEeJcAZJsVN89NBBeayS3d95gBvTKx83obAHAPsPcD30\n7731HWR7uHMZ2SoTg2TrP6jPPZtg1cHc0f1kiyc4MIyJPoMAgCLvkrd3cbB722/cQbZSWQegochB\neUzsppdbuFY/WeAd+niISsNXNfQqUBfZBUkd0P/KqqvItm2AX+NClrMlzqWr6HcMxxG4YziOwB3D\ncQTndQwze8DMBszs6Wm2bjN7xMyeNbPvmhkHAo6ziKnnjvEZALfPsL0fwPdDCFcDeBTAXzf6xBzn\nQnLeVakQwo/NbKb0350Abqk9/iyAx1B1Fkl5htLA8WOsfJet6BWTbD/3wvjZVl5VqlQ4JaQyqeVR\nyqJ249tf/Fey/fMnub/GBz/5H2QrDh2T81QS3B+jXOYVoNY27mXRuoLrKQAgMco9OyYqvFpUVC9n\nUbWsBIppPs/KpBCXSPBKWXrlOrIVxng1DgDicU7fiIn0kYRQgEy3aDWyJ8WqVjnLfwu3v4jFHfY+\n+gM5JjD3GGNFCGEAAEIIxwBwQpPjLGIatY9xzgyt/DT9WfWp4TjN4PDQEI5EJKvOZK6OMWBmK0MI\nA2a2CgDf36cxXf3NcS4Uvd3d6O3uPv37lr4DkcfW+1XKcPZ25MMA3lF7/HYAX5/VGTrORc557xhm\n9kUAtwLoMbNDAO4B8GEAXzGzuwAcBPDm2Uw6OjpOtqXLdZhSEekKwyMjZCt1cGAYW9ZNNgAYFqkR\nJ4bY9rt//Idky584yfNkdGBYPsa1G/EOoWS4jG1tgWsKACAk+ZpKk5ym8pZePqevHdRpFaPtnKJT\nFGkZEIqJVuaAvmvJEjmPqomoiDoaFXwnU/pbRzLO73siyZ/3O3fulM+Pop5VqbdF/NerZjWT4ywi\nfOfbcQTuGI4jcMdwHEFT6jFiM2Kutes30DG7tnORPwBcfc0LyNbTw3USh3dvI1sY1cp7xdXcw896\nryBbQqgOxkWdQiZiOfrIscNsbOdzD8tXk60ypKsFRgf5nLrA17l2iIUYxov6POOTvHNuMf7MTCzh\nlLhUkoP8dFr3U4yL7IS4WGQIcX6NE6Y/w9Mx3hcLYFvXUrEgMKAzFgC/YziOxB3DcQTuGI4jcMdw\nHEFz2gDMCL4PH+mjY36xfat87otvvIlsW/ZwoJ1YxX3kUkl9eaUSp0VXjvySbCHBO8Kqdr+0bqOc\nJ97GwWpItbLtMAfpJ4Z4NxsArkufItvrW3hHuWOcbck4p4gDQGgVwbcoA4gn+NxbW1lwolLWix5J\n8OtpYoc9IRJNUxH9FJNlDug7RauFwYiehlH4HcNxBO4YjiNwx3AcgTuG4wjcMRxHcEEkOgdPDZNt\neFI3Y+wf4NSI1BpOoUiuXsm2Eb06EquwhGRLhuscWkVvjmVrlpNtQogrAMDBrf9HtniZV3FSS3ie\n/Cmu+wCAreOdZNs2wtcTb+OVptblWuWoLOofMiKtYkUvp+e0iBWgkNN9OHJ5FqeIiXkSCf68zqj6\nEAD9j3+TbFev45QfiDSTH+3X0qrV83Ich3DHcBzBXJUI7zGzw2a2tfbD0tqOs4iZqxIhANwbQrih\n9vOdBp+X41xQ5qpECKgmBhGUZuSEtCU54Hrxr9wqn3vqOCsRPvnAg2S7/pWvJlts41o5ZkIEjOVx\nVkccy3FaxuguEVCL6wGAZDcH6kjx3MlxTlHJpoVoAgAT6RYxISjQtmwV2boznNIBAMNZDpaTQvhg\n58MPkC1hXE9RsQjhAqUaKGpeVEB+53U3yDFHAn+296y/nGyDJ07I50cxnxjjbjPbbmb3u6izc6kx\n1+XaTwH4xxBCMLN/AnAvgN+POjhfOCOxEo97vO9cGPoHT6F/iJMwFXNyjBDC9PvSfQC+ca7jW1K6\nD7bjNJPVS3uweumZLOxt+zmjeoo5KRHWZDmneAMA7hTvOIuYuSoRvsLMNgOoAOgDwJJ905ipQDeR\n413uowf65HM3veoVZHtyJ/vhbddzcPajJ7bIMW0pS+zHe3jnuyKaTsZFUf3yNbwjDACZLlGPIWof\nYiIgP3VA66oeeuLbZGtZygILsQwLEoybbnj5xt/8NbJlj/DCw+d3c81MRTUFhVZRLAvJf1WPoTTC\nv77j53JMJRJ+8Hu8G14RKojnYq5KhJ+Z1SyOs8jwSNhxBO4YjiNwx3AcQVPSzmcG30oOfutP/1c+\nt0Xs1g71P0e2f/zoh8h2y60RguxitxYTvCAwVmY1v8xv8Q57MRvRBkD01mtp5WDx6E+fJNuRLT+U\nY6bTPFdC7HJ3xXj3+aP36DaJn/gI9xbdumWXPJbh4Fm9vwBgsTqTJcRhJgL3KFSgHXVOUfgdw3EE\n7hiOI3DHcByBO4bjCNwxHEdwQcQQFLkJrkkAgP7nDpHt8R9yXVSildMdenp0w8tTQ6L7cpITHWNF\nXgkp3v8tsh157S1ynk5xTv0f5lqSZIzrKTK9l8kx29vZ/uC//D3ZPvGhfybb5z/9KTnmO//ovWT7\nn0ffJI+th9msIC0EcvZZnpPfMRxH4I7hOAJ3DMcRuGM4juCiCb6PH2MxAgAoP/ETso2ODJHtsYe/\nTrZcklX7AMAqnBKSz7HIQFwo9MVE08a2bX1ynvYTonLRWGQgdtW1ZOts0cH3B/6KS19++HNu7PnE\nlh+T7dpN18kxP/rBD7AxsLqhwkTqSaWcl8eq2ol6SUakk/QkeYEjK869XTQQ1VqPVfyO4TgCdwzH\nEdSjRNhrZo+a2U4z22Fmf1azd5vZI2b2rJl91yV0nEuJeu4YJQDvDiFcC+AmAO8ys2sAvB/A90MI\nVwN4FADnLjvOIqWemu9jAI7VHo+b2W4AvQDuBDC15ftZAI+h6iznRe2MWkSwNyx0gMplPnZ4mEOp\n+EpuWBmFytaviAaNam4hnAcAGOl7imzpyzaQbUWS6ylue91r5ZhPHuBalN3bniZb1wYWaHj6WS17\nXxqpT6Vv9RUsOJEVKoqDx7nZJgDE1PsuMg46RcPLjR0sIgEAqcBZA5s6WbDipHiHdxw6IscEZhlj\nmNkGAJsBPA5gZQhhADjtPDr/wnEWIXU7hpm1A/gqgD8PIYyDP2RnVyLlOBcxde1jmFkCVaf4zxDC\n1IbBgJmtDCEM1ATYRGZelULxzO0uHoshkZj7erbjzJVjoyM4NqqTVWdS7wbfgwB2hRA+Ps32MIB3\nAPgIgLcD4B22GlGN6B2nmazq7MKqzjOLp08diY4x6lEivBnA7wDYYWbbUP3K9DeoOsSXzewuAAcB\nvLneE1SF6VGpyvEYB2dqB7WkYvd8RA8+sXutkpXVzrcleKe1Uoj4Fpni4H+t6Le35qqryJYT0v4A\nkB/n8zx2kFUL+3axWmOmXbcWWH7Fi8k2/vRjZCsX+Zxyk9xPsSWjMw5aEnzu6SSLO3RkeOW/O6l7\nNHa3cKDeluIxT2XH5fOjqGdV6ieIXHdBhAyH4yxufOfbcQTuGI4jcMdwHEFTlovqqQEendDBUU8L\nKxEmU7wLWojxcbGIyCiUxeeBcQCtgnQr83GJuFYiTIsefOlWPjYp3oZxsaMMALFT3JPwxKF9ZOtZ\nzX3obrz5Jjnmz//nEbKt2rCJbG2dfD0Tg3w+rZ064yBWYGXHlNj5TiT4dQ/Qff1iBV51mcQk2Tpm\n2cnL7xiOI3DHcByBO4bjCNwxHEfgjuE4gosmialzuS7+Twr70hKnegwc47wXi+rTEOdVslKpSLaY\n8UpITKxulIsTcp6YSDNJJXn1LC4Sk8ORPXLMXTt2sDHw8lu7WP3as3evHLNU4GuPi5Whwjiv9kAI\nS6RadUpIWaxKlUssnFAq8eseOrgBJwB0FbgO5+jwCNmWzDJx1e8YjiNwx3AcgTuG4wjcMRxH0Jzm\nlJWZQWidgR2A9DKx5S/SR2ImfFwE1IBuXqhEDhLKluGgNkphz4ztARysbv2vj5GtNaNrJ+KipuKK\ndc8j28lTx8iWO6FrGhKizqJU5NcuP8bBs6xjqeg6mNYOThUJZX49YqJuY3hCqxu2tnJ6ULLE6TQT\nYsHlXPgdw3EE7hiOI5iLEuGf1uz3mNlhM9ta+7lj4U/XcZpDPTHGlBLh9pqEzpNm9r3a/90bQrh3\n4U7PcS4Mc1UiXFv777oimgrtjnLANTGmRdlDHwfAK1/KpeYndm2p51QARNwmixz8q4C8InapVaAK\nAGOHnyHb0QM7yZZp5+L/Ai1YVImLdgWH9vJueFfPGrIV8yxcAACFPAfl8jqFQEOlzG0NCmOsHgkA\nPetfyGOOcUuHimiVMBzRo/F4TOzap3nnPCdet3MxVyXCn9VMd5vZdjO730WdnUuJ+SgRfgrA80II\nm1G9o/hXKueSYc5KhCGE6UrA9wH4RtTzi9NuwbFYDHGp6+Q4C8tANouBrN7LmcmclQjNbFUt/gCA\nNwBgha8aSSFc5jjNZmVrK1a2nslu/sUwxzdTzEeJ8G1mthnVSLoPADeHOz3G2TvAUkmwxAEXABSy\nnNLd/9PvkC2VYoXAeAfLwQNARdyx4kXe0S4K9brsCZbhj8X0y6ius72zm49LCLXFilYizIld/7x4\njcbGONDuaF8qx2zv4HMqFnmBJJfjeSYLbEskWB0QACzF9vGxZ8nW2cVtEQYnBuSYR/P8d/OydSwE\nsec4ZwKci/koEfJfp+NcIviXfccRuGM4jsAdw3EE7hiOI2jKOmpqRr8C1R8jakWX00mAXJbrAnJi\nZQYjOs1ESYZGrSzNJJnk1a+0aKYIAKUy1xBMjA3ygRVOa0i16GaMSzo4wWBArFTFxeUURNoLAOSE\nGEK5xJ+Z6r1IJdvIVsxrudVUB6+KqessV/g8W8WqIwDkxZ/w7pMsG9oSpdcagd8xHEfgjuE4AncM\nxxG4YziOoDn9MWaWbYhSg3ic0yIAoFzmwDCR0L0SeGIdcMVELwxVa2DiOIvx3HFRvA8AiRgH5QXj\nuoBqjuaM8ynq+oGTx/n16BD9KAoFTpaLWmAoFXguVWehaxo4IG9J6s/bmLimK17GhZ+Dv9zOY6Z1\n8J1JcNpPx8h+suVk99Jo/I7hOAJ3DMcRuGM4jsAdw3EEF6Q5pWr6qGwAUCzy7nFcqMrFZFCsA/o2\noV43MqoK+HketWuey2qVvHicA75MhneK28Vu9uDJ43LMUpl3/cdGeP5MG4/Z1aWbRhYKHNgOnuTX\nQ9XMtLez5H9b9wY5T3acMxEs8CJBolXIByilSQBHBg6RbXng1/1UXu/6R+F3DMcRuGM4jqAeJcIW\nM/uZmW2rqRF+qGbvNrNHzOxZM/uuy+c4lxLndYwQQh7AK0II1wO4DsAra3Xg7wfw/RDC1QAeBfDX\nC3qmjtNE6gq+QwhTkUsLqs40BOBOALfU7J8F8BiqzsKIgHUmKqW5+lTRny7waaugWNkAIJlUQTnP\nU6lwEKfWCNT5AIAleDc9l+Ngc3KSA8P169fLMfv6fsnzQ40pUskrepEgmeTWAkt7VvOYIt0fYkO5\nPKmVCHPjHORvvGoT2U4e4Z3rtNjdB4Chk/08T+BFgkxKL8REUVeMYWaxmkLIMQCPhRB2AVgZQhgA\nTst4rpjVzI5zEVPvHaMC4Hoz6wTwXTO7FfwRq1ukOs4iZFb7GCGEUTP7FoCXABgws5UhhAEzWwVA\nL7wDyE7TI0okkkgl60wCdJwGcnxyEscn61MirGdVatnUipOZtQK4DcA2AA8DeEftsLcD+HrUGK3p\nttM/yXozYx2nwazIZPDCZT2nf85FPXeM1QA+a9VINoaqfu0PajHHl83sLgAHAbx5vifuOBcL9SgR\n7gBwg7APAuBGFYKZ9Rh1LFKd9WyGV7CUHGY6rQUF8nlendGrWnxDFToOCEHLaSaN6zGyJV6Bihnf\nRfsO7pNjrljBjSgHTx0mW0HUWCRKEV8jRB+Q0WF+jZJCUKAg6jbG8loTti3wStewaHhZFi9yLBkh\ngyq+lpdTrWRLyZSfaJq6812M0Kdt+DzF5syjipsWgmZdTy4/u+Yqc2VMNItZKAZGdbOc83FpOkaT\n5imVm+UYumNTo8mLu8xCMN5Exzi+GBzDcRYLTUk7f9GLrgMAHOjbh40bLp+VO6r+cOq7f3KaINeB\nA/uwcePlaGnh75oAALHLPpnjHm9BbMZb7Ews0newDxvWb5BxBwBkhJhYvqxqvtWu7JnJDxzYj40b\nq7HF0m7urTc6omT8+a6Zaon4no7q/Hv37cGVl18FQIuwBRFPBBGbpdJ6l3lZLT4qFUbw/GuurNrW\nraXjiuP8uiVEXz0A6EnxXXtd8kws9Fx2DBuuvgqJiRF+8m7uhziFKVXARmIqp8NxLhJCCHIpaMEd\nw3EWIx5jOI7AHcNxBE1xDDO7w8yeMbM9Zva+BZynz8yeqhVV/bzBYz9gZgNm9vQ0W8OLtSLmucfM\nDpvZ1toPq5TNfp5eM3u0Vny2w8z+rGZv6DWJef50Ia6p4QV1IYQF/UHV+X4JYD2AJIDtAK5ZoLn2\nA+heoLFfDmAzgKen2T4C4L21x+8D8OEFmuceAO9u8PWsArC59rgdwLMArmn0NZ1jnoW4pkzt3ziA\nxwHcPNfracYd40YAe0MIB0MIRQBfQrXIaSGYyudqOCGEH6NaoDWdO1Et0kLt39cv0DyAzo2ZzzzH\nQgjba4/HAewG0IsGX1PEPFNrtI2+pqiCullfTzMcYy2A6T2AD+PMC9NoAoDvmdkWM/uDBZpjOitC\n84q17jaz7WZ2f6Pr681sA6p3qcexgAVo0+b5Wc3U0GtqZEHdpRZ83xxCuAHAawG8y8xe3uT5F2rt\n+1MAnhdC2Izqm35vowY2s3YAXwXw57VP9AUpQBPzNPyaQgiVUNUm6AXwq/MpqGuGYxwBsG7a7701\nW8MJIfTX/j0B4CFUv8YtJANmthIAzlesNR9CCCdC7UsygPsAvLQR41pVZv2rqJYSTNXTNPya1DwL\ndU21sUcBnFVQVzuPuq+nGY6xBcAVZrbezFIA3opqkVNDMbNM7VMJZtYG4NUAftHoaXD29+K6i7Xm\nM0/tDZ3iDWjcdT0IYFcI4ePTbAtxTTRPo6+pEQV1Z9HIVYFzrBbcgepqxF4A71+gOTaiuuK1DcCO\nRs8D4IsAjgLIAzgE4J0AugF8v3ZtjwBYskDzfA7A07Xr+xqq35vnO8/NqGp8TL1mW2vv09JGXtM5\n5mnoNQHYVBt7G4CnALynZp/T9XhKiOMILrXg23EagjuG4wjcMRxH4I7hOAJ3DMcRuGM4jsAdw3EE\n7hiOI/h/y4pDdMTT2KsAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fb26c03ab10>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -47,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -58,11 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.00366342  0.00216965 -0.00507684  0.00128594  0.00261613  0.01277234\n",
+      "   0.00546607  0.00432803 -0.00597889 -0.00568094]]\n"
+     ]
+    }
+   ],
    "source": [
     "#sess = tf.InteractiveSession()\n",
     "\n",
