add cifar10 examples

--- a/read images.ipynb
+++ b/read images.ipynb
@@ -58,11 +58,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0]\n",
+      "[0 0 0 0]\n",
+      "[0 0 0 0]\n",
+      "[0 0 0 0]\n",
+      "[0 0 0 0]\n",
+      "[0 0 0 0]\n",
+      "[0 0 0 0]\n",
+      "[0 0 0 0]\n",
+      "[0 0 0 0]\n",
+      "[0 0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
     "image, label = input_pipeline(['datas/ordered.txt'], 32, 32, 4)\n",
     "\n",
@@ -81,7 +98,7 @@
     "                break;\n",
     "            batch = sess.run([image, label])\n",
     "            print batch[1]\n",
-    "    except tf.error.outOfRangeError:\n",
+    "    except tf.errors.OutOfRangeError:\n",
     "        print('Done training -- epoch limit reached')\n",
     "    finally:\n",
     "        coord.request_stop()\n",
