update graph plot

--- a/cifar10/test.ipynb
+++ b/cifar10/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -27,11 +27,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[training] step:0000, loss:6.383767 accuracy:0.093750 (318.7 examples/sec; 0.402 sec/batch)\n",
+      "[training] step:0010, loss:5.128115 accuracy:0.093750 (698.5 examples/sec; 0.183 sec/batch)\n",
+      "[training] step:0020, loss:4.283364 accuracy:0.109375 (633.4 examples/sec; 0.202 sec/batch)\n",
+      "[training] step:0030, loss:3.454549 accuracy:0.281250 (679.2 examples/sec; 0.188 sec/batch)\n",
+      "[training] step:0040, loss:3.153194 accuracy:0.257812 (688.0 examples/sec; 0.186 sec/batch)\n",
+      "[training] step:0050, loss:2.732093 accuracy:0.320312 (638.9 examples/sec; 0.200 sec/batch)\n",
+      "[training] step:0060, loss:2.594577 accuracy:0.242188 (696.0 examples/sec; 0.184 sec/batch)\n",
+      "[training] step:0070, loss:2.524680 accuracy:0.242188 (724.5 examples/sec; 0.177 sec/batch)\n",
+      "[training] step:0080, loss:2.246805 accuracy:0.312500 (669.6 examples/sec; 0.191 sec/batch)\n",
+      "[training] step:0090, loss:2.101141 accuracy:0.312500 (719.1 examples/sec; 0.178 sec/batch)\n",
+      "[training] step:0100, loss:2.155139 accuracy:0.335938 (719.1 examples/sec; 0.178 sec/batch)\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import tensorflow as tf\n",
@@ -45,7 +63,7 @@
     "    reader.start(sess)\n",
     "    \n",
     "    try:\n",
-    "        for step in range(10001):\n",
+    "        for step in range(101):\n",
     "            start_time = time.time()\n",
     "            _ = sess.run([train_op, loss, accuracy])\n",
     "            duration = time.time() - start_time\n",
